added new web view: trayectory (WIP)

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@
                     <ul class="nav child_menu">
                       <li><a href=" {% url "profile:expedition" %} "> Por expedición</a></li>
                       <li><a href=" {% url "profile:stop" %} "> Por parada</a></li>
+                      <li><a href=" {% url "profile:trayectory" %} "> Trayectoria</a></li>
                     </ul>
                   </li>
                 </ul>
