map added to view segments

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,15 @@
                   <li><a href=" {% url "expedition" %} "><i class="fa fa-bus"></i> por expedición</a></li>
                 </ul>
               </div>
+              <div class="menu_section">
+                <h3>Velocidades</h3>
+                <ul class="nav side-menu">
+                  <li><a href=" {% url "matrix" %} "><i class="fa fa-bus"></i> matriz por servicio</a></li>
+                </ul>
+              </div>
             </div>
             <!-- /sidebar menu -->
-          </div>
+z          </div>
         </div>
 
         <!-- top navigation -->
