--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                                         <a><i class="fa fa-line-chart"></i> Indicadores de viaje<span
                                             class="fa fa-chevron-down"></span></a>
                                         <ul class="nav child_menu">
-                                            <li><a href=" {% url "indicators:index" %} ">Etapas por viaje</a></li>
+                                            <li><a href=" {% url "indicators:time" %} ">Tiempo de Viaje</a></li>
 {#                                            <li><a href="#">Viajes de 4 Etapas</a></li>#}
 {#                                            <li><a href="#">Etapas según destino</a></li>#}
 {#                                            <li><a href="#">Tiempos de viaje</a></li>#}
