--- a/indicators/templates/indicators/byTravelTime.html
+++ b/indicators/templates/indicators/byTravelTime.html
@@ -4,177 +4,244 @@
 {% block title %}Indicadores: Tiempo de Viaje{% endblock %}
 
 {% block css %}
-{% with "components/gentelella/vendors/" as gentelella_static %}
-  <link href="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.css" %}" rel="stylesheet">
-  <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.css" %}" rel="stylesheet">
-  <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.css" %}" rel="stylesheet">
-  <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.css" %}" rel="stylesheet">
-  <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
-<!-- iCheck -->
-  <link href="{% static gentelella_static|add:"iCheck/skins/flat/green.css" %}" rel="stylesheet">
 
-  <link href="{% static gentelella_static|add:"datatables.net-bs/css/dataTables.bootstrap.min.css" %}" rel="stylesheet">
-  <link href="{% static gentelella_static|add:"datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" %}" rel="stylesheet">
-  <link href="{% static gentelella_static|add:"datatables.net-responsive-bs/css/responsive.bootstrap.min.css" %}" rel="stylesheet">
-  <link href="{% static gentelella_static|add:"datatables.net-scroller-bs/css/scroller.bootstrap.min.css" %}" rel="stylesheet">
-  <link href="{% static gentelella_static|add:"datatables.net-scroller-bs/css/scroller.bootstrap.min.css" %}" rel="stylesheet">
-  <style>
-.select2-container .select2-choice:not(.select2-default) {
-    background-image: none !important;
-    background-color: #D9FFC7;
-}
-  </style>
-{% endwith %}
+    {% with "components/gentelella/vendors/" as gentelella_static %}
+        <link href="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.css" %}"
+              rel="stylesheet">
+        <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.css" %}" rel="stylesheet">
+        <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.css" %}" rel="stylesheet">
+        <link href="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.css" %}" rel="stylesheet">
+        <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
+        <!-- iCheck -->
+        <link href="{% static gentelella_static|add:"iCheck/skins/flat/green.css" %}" rel="stylesheet">
+
+        <link href="{% static gentelella_static|add:"datatables.net-bs/css/dataTables.bootstrap.min.css" %}"
+              rel="stylesheet">
+        <link href="{% static gentelella_static|add:"datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" %}"
+              rel="stylesheet">
+        <link href="{% static gentelella_static|add:"datatables.net-responsive-bs/css/responsive.bootstrap.min.css" %}"
+              rel="stylesheet">
+        <link href="{% static gentelella_static|add:"datatables.net-scroller-bs/css/scroller.bootstrap.min.css" %}"
+              rel="stylesheet">
+        <link href="{% static gentelella_static|add:"datatables.net-scroller-bs/css/scroller.bootstrap.min.css" %}"
+              rel="stylesheet">
+
+    {% endwith %}
+    <style>
+
+        .select2-container .select2-choice:not(.select2-default) {
+            background-image: none !important;
+            background-color: #D9FFC7;
+        }
+
+    </style>
 {% endblock %}
 
 {% block content %}
-<div class="">
-  <div class="page-title">
-    <div class="title_left">
-      <h3>Tiempo de Viaje <small>Indicadores</small></h3>
+
+
+    <div class="">
+        <div class="page-title">
+            <div class="title_left">
+                <h3>Tiempo de Viaje
+                    <small>Indicadores</small>
+                </h3>
+            </div>
+            <div class="title_right">
+            </div>
+        </div>
+        <div class="clearfix"></div>
+        <br/>
+
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2><i class="fa fa-filter"></i> Filtro
+                            <small></small>
+                        </h2>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+
+                        <div class="col-md-2 col-sm-12 col-xs-12 form-group">
+                            <label class="control-label" for="dateFromFilter">Desde:</label>
+                            <input type="text" id="dateFromFilter" placeholder="Desde" class="form-control">
+                        </div>
+
+                        <div class="col-md-2 col-sm-12 col-xs-12 form-group">
+                            <label class="control-label" for="dateToFilter">Hasta:</label>
+                            <input type="text" id="dateToFilter" placeholder="Hasta" class="form-control">
+                        </div>
+
+                        <div class="col-md-2 col-sm-12 col-xs-12 form-group">
+                            <label class="control-label" for="dayTypeFilter">Tipo de día:</label>
+                            <select class="form-control" id='dayTypeFilter' multiple="multiple">
+                                {% for dayType in dayTypes %}
+                                    <option>{{ dayType }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+
+                        <div class="col-md-4 col-sm-12 col-xs-12 form-group">
+                            <label class="control-label" for="periodFilter">Período:</label>
+                            <select class="form-control" id='periodFilter' multiple="multiple">
+                                {% for period in periods %}
+                                    <option>{{ period }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+
+                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+                            <div class="ln_solid"></div>
+                            <button type="submit" id="btnUpdateChart" class="btn btn-success btn-lg btn-round">
+                                Actualizar datos
+                            </button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+
+            {# Graphs #}
+            <div class="col-md-6 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2><i class="fa fa-clock-o"></i> Tiempo de viaje promedio
+                            <small> para <strong id="expeditionNumber">N</strong> viajes</small>
+                        </h2>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <div class="col-md-9 col-sm-9 col-xs-12">
+                            <div id="barChart" style="height:400px;"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            {# Map #}
+            <div class="col-md-6 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2><i class="fa fa-map-o"></i> Tiempo de viaje a sector
+                            <small> para <strong id="expeditionNumber">N</strong> viajes</small>
+                        </h2>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <div id="mapChart" style="height:400px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2><i class="fa fa-list-ol"></i> Viajes (<strong id="expeditionNumber2">N</strong>)</h2>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <table id="expeditionDetail"
+                               class="table table-striped table-bordered dt-responsive table-condensed nowrap"
+                               width="100%">
+                            <thead>
+                            <tr>
+                                <th style="padding-right:5px;">
+                                    <input type="checkbox" id="checkbox-select-all" class="flat" checked/>
+                                </th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                            </thead>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="title_right">
-    </div>
-  </div>
-  <div class="clearfix"></div>
-  <br />
-
-  <div class="row">
-    <div class="col-md-12 col-sm-12 col-xs-12">
-      <div class="x_panel">
-        <div class="x_title">
-          <h2><i class="fa fa-filter"></i> Filtro <small></small></h2>
-          <div class="clearfix"></div>
-        </div>
-        <div class="x_content">
-          
-          <div class="col-md-2 col-sm-12 col-xs-12 form-group">
-            <label class="control-label" for="dateFromFilter">Desde:</label>
-            <input type="text" id="dateFromFilter" placeholder="Desde" class="form-control">
-          </div>
-
-          <div class="col-md-2 col-sm-12 col-xs-12 form-group">
-            <label class="control-label" for="dateToFilter">Hasta:</label>
-            <input type="text" id="dateToFilter" placeholder="Hasta" class="form-control">
-          </div>
-
-          <div class="col-md-2 col-sm-12 col-xs-12 form-group">
-            <label class="control-label" for="dayTypeFilter">Tipo de día:</label>
-            <select class="form-control" id='dayTypeFilter' multiple="multiple">
-              {% for dayType in dayTypes %}
-              <option>{{ dayType }}</option>
-              {% endfor %}
-            </select>
-          </div>
-
-          <div class="col-md-4 col-sm-12 col-xs-12 form-group">
-            <label class="control-label" for="periodFilter">Período:</label>
-            <select class="form-control" id='periodFilter' multiple="multiple">
-              {% for period in periods %}
-              <option>{{ period }}</option>
-              {% endfor %}
-            </select>
-          </div>
-          
-          <div class="col-md-12 col-sm-12 col-xs-12 form-group">
-            <div class="ln_solid"></div>
-            <button type="submit" id="btnUpdateChart" class="btn btn-success btn-lg btn-round">Actualizar datos</button>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-6 col-sm-12 col-xs-12">
-      <div class="x_panel">
-        <div class="x_title">
-          <h2><i class="fa fa-clock-o"></i> Tiempo de viaje promedio<small> para <strong id="expeditionNumber">N</strong> viajes</small></h2>
-          <div class="clearfix"></div>
-        </div>
-        <div class="x_content">
-          <div class="col-md-9 col-sm-9 col-xs-12">
-            <div id="barChart" style="height:400px;"></div>
-          </div>
-          <!-- <div class="col-md-3 col-sm-3 col-xs-12">
-            <h4><i class="fa fa-clock-o"></i> Expediciones por hora</h4>
-            <div id="timePeriodChart" style="height:89px;"></div>
-            <h4><i class="fa fa-truck"></i> Expediciones por patente <strong id="licensePlateNumber">(N)</strong></h4>
-            <div id="wordcloudChart1" style="height:100px;"></div>
-            <h4><i class="fa fa-calendar"></i> Expediciones por tipo de día</h4>
-            <div id="wordcloudChart2" style="height:100px;"></div>
-          </div> -->
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-sm-12 col-xs-12">
-      <div class="x_panel">
-        <div class="x_title">
-          <h2><i class="fa fa-map-o"></i> Tiempo de viaje a sector<small> para <strong id="expeditionNumber">N</strong> viajes</small></h2>
-          <div class="clearfix"></div>
-        </div>
-        <div class="x_content">
-            <div id="barChart" style="height:400px;"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-12 col-sm-12 col-xs-12">
-      <div class="x_panel">
-        <div class="x_title">
-          <h2><i class="fa fa-list-ol"></i> Viajes (<strong id="expeditionNumber2">N</strong>)</h2>
-          <div class="clearfix"></div>
-        </div>
-        <div class="x_content">
-          <table id="expeditionDetail" class="table table-striped table-bordered dt-responsive table-condensed nowrap" width="100%">
-            <thead>
-              <tr>
-              <th style="padding-right:5px;"><input type="checkbox" id="checkbox-select-all" class="flat" checked></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              <th></th>
-              </tr>
-            </thead>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 {% endblock %}
 
 {% block js %}
-{% with "components/gentelella/vendors/" as gentelella_static %}
-<script src="{% static gentelella_static|add:"moment/min/moment-with-locales.min.js" %}"></script>
-<script src="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.js" %}"></script>
-<script src="{% static gentelella_static|add:"jquery.tagsinput/src/jquery.tagsinput.js" %}"></script>
-<script src="{% static gentelella_static|add:"pnotify/dist/pnotify.js" %}"></script>
-<script src="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.js" %}"></script>
-<script src="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.js" %}"></script>
-<script src="{% static gentelella_static|add:"select2/dist/js/select2.min.js" %}"></script>
+    {% with "components/gentelella/vendors/" as gentelella_static %}
+        <script src="{% static gentelella_static|add:"moment/min/moment-with-locales.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"bootstrap-daterangepicker/daterangepicker.js" %}"></script>
+        <script src="{% static gentelella_static|add:"jquery.tagsinput/src/jquery.tagsinput.js" %}"></script>
+        <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.js" %}"></script>
+        <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.buttons.js" %}"></script>
+        <script src="{% static gentelella_static|add:"pnotify/dist/pnotify.nonblock.js" %}"></script>
+        <script src="{% static gentelella_static|add:"select2/dist/js/select2.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"datatables.net/js/jquery.dataTables.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"datatables.net-bs/js/dataTables.bootstrap.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"datatables.net-fixedheader/js/dataTables.fixedHeader.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"datatables.net-responsive/js/dataTables.responsive.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"datatables.net-responsive-bs/js/responsive.bootstrap.js" %}"></script>
+        <script src="{% static gentelella_static|add:"datatables.net-scroller/js/dataTables.scroller.min.js" %}"></script>
 
-<script src="{% static gentelella_static|add:"datatables.net/js/jquery.dataTables.min.js" %}"></script>
-<script src="{% static gentelella_static|add:"datatables.net-bs/js/dataTables.bootstrap.min.js" %}"></script>
-<script src="{% static gentelella_static|add:"datatables.net-fixedheader/js/dataTables.fixedHeader.min.js" %}"></script>
-<script src="{% static gentelella_static|add:"datatables.net-responsive/js/dataTables.responsive.min.js" %}"></script><script src="{% static gentelella_static|add:"datatables.net-responsive-bs/js/responsive.bootstrap.js" %}"></script>
-<script src="{% static gentelella_static|add:"datatables.net-scroller/js/dataTables.scroller.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
 
-<script src="{% static gentelella_static|add:"jquery-sparkline/dist/jquery.sparkline.min.js" %}"></script>
-<script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
+    {% endwith %}
 
-<script src="{% static "components/echarts/dist/echarts.min.js" %}"></script>
-<script src="{% static "components/echarts-wordcloud/dist/echarts-wordcloud.min.js" %}"></script>
+    <script>
+        "use strict";
+        $(document).ready(function () {
 
-{% endwith %}
-<script src="{% static "own/js/echartsTheme.js" %}"></script>
-<script>
+            // ========================================================================
+            // FILTERS
+            // ========================================================================
+            (function () {
 
-</script>
+                // set locale
+                moment.locale('es');
+
+                // datetime pickers
+                $('#dateFromFilter').daterangepicker({
+                    singleDatePicker: true,
+                    language: 'es'
+                });
+                $('#dateToFilter').daterangepicker({
+                    singleDatePicker: true,
+                    language: 'es'
+                });
+
+                // day type and period filters
+                $('#dayTypeFilter').select2({placeholder: 'tipo de día'});
+                $('#periodFilter').select2({placeholder: 'Periodo'});
+
+
+                // Update Charts from filters
+                $('#btnUpdateChart').click(function () {
+
+                    var fromDate = $('#dateFromFilter').val();
+                    var toDate = $('#dateToFilter').val();
+                    var dayType = $('#dayTypeFilter').val();
+                    var period = $('#periodFilter').val();
+
+                    console.log("--- update charts ---");
+                    console.log("from date: " + fromDate);
+                    console.log("to date: " + toDate);
+                    console.log("day type: " + dayType);
+                    console.log("period: " + period);
+                    console.log("-- -- -- -- -- -- -- ");
+
+                });
+            })() // end filters
+
+
+
+        });
+
+    </script>
+
 {% endblock %}
