moved js files to bowerapp because it is its responsability

--- a/profile/templates/profile/byStop.html
+++ b/profile/templates/profile/byStop.html
@@ -187,7 +187,7 @@
 <script src="{% static "components/echarts-wordcloud/dist/echarts-wordcloud.min.js" %}"></script>
 
 {% endwith %}
-<script src="{% static "own/js/echartsTheme.js" %}"></script>
+<script src="{% static "js/echartsTheme.js" %}"></script>
 <script>
 "use strict";
 $(document).ready(function(){
