--- a/profile/templates/profile/trayectory.html
+++ b/profile/templates/profile/trayectory.html
@@ -172,7 +172,7 @@
 <script src="{% static "components/echarts/dist/echarts.min.js" %}"></script>
 
 {% endwith %}
-<script src="{% static "own/js/echartsTheme.js" %}"></script>
+<script src="{% static "js/echartsTheme.js" %}"></script>
 <script>
 "use strict";
 $(document).ready(function(){
